--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>eurekaserver</module>
         <module>eurekaprovider</module>
         <module>eurekacomsumer</module>
+        <module>ribboncomsumer</module>
     </modules>
 
 
