--- a/ribboncomsumer/src/main/resources/application.yml
+++ b/ribboncomsumer/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 7102
+  port: 7103
 spring:
   application:
     # 指定注册到eureka server上的服务名称
-    name: eureka-consumer
+    name: ribbon-comsumer
 
 eureka:
   client:
