--- a/eurekaproviderTwo/src/main/resources/application.yml
+++ b/eurekaproviderTwo/src/main/resources/application.yml
@@ -1,9 +1,19 @@
 server:
-  port: 7103
+  port: 7102
 spring:
   application:
-    # 指定注册到eureka server上的服务名称
-    name: ribbon-comsumer
+    name: provider
+
+management:
+  endpoints:
+    web:
+      exposure:
+        # 开放所有监控端点
+        include: '*'
+  endpoint:
+    health:
+      # 是否展示健康检查详情
+      show-details: always
 
 eureka:
   client:
@@ -13,9 +23,3 @@ eureka:
   instance:
     # 是否注册IP到eureka server，如不指定或设为false，那就会注册主机名到eureka server
     prefer-ip-address: true
-
-
-#设置负载均衡规则:随机访问
-provider:
-  ribbon:
-    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
