集成feign与hystrix的集成 并 添加发生熔断时返回的2种call back fail的方式

--- a/feignhystrixcomsumer/src/main/resources/application.yml
+++ b/feignhystrixcomsumer/src/main/resources/application.yml
@@ -39,9 +39,12 @@ feign:
       provider:
         loggerLevel: full
 
-#hystrix配置
+#hystrix配置【断路器】
 management:
   endpoints:
+    #查看hystrix状态
+    health:
+      show-details: always
     web:
       exposure:
         include: 'hystrix.stream'
