--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
         <module>ribboncomsumer</module>
         <module>eurekaproviderTwo</module>
         <module>feigncomsumer</module>
+        <module>hystrixdashboard</module>
+        <module>hystrixturbine</module>
+        <module>gatewayzuul</module>
     </modules>
 
 
