spring-cloud集成config-server的服务端测试内容

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>gatewayzuul</module>
         <module>feignhystrixcomsumer</module>
         <module>feignhystrixcomsumerTwo</module>
+        <module>configserver</module>
     </modules>
 
 
