添加相应的配置文件内容

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>feignhystrixcomsumer</module>
         <module>feignhystrixcomsumerTwo</module>
         <module>configserver</module>
+        <module>configclient</module>
     </modules>
 
 
