--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
           uri: https://github.com/ZuoYouLai/Fcloudparent.git
           username:
           password:
-          #相应配置文件在git地址根目录下进行查找
+          #相应配置文件在git地址根目录下进行查找  search-paths指定，search-path里面目录可以以,进行隔开
           search-paths: gogal-config
 
 #设置这个内容主要是为了查看启动时是否会访问git地址的内容
