eureka加上安全的校验内容

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
         <module>configserver</module>
         <module>configclient</module>
         <module>sleuthcustomer</module>
+        <module>eurekaserverauthent</module>
+        <module>eurekaproviderauthent</module>
     </modules>
 
 
