springcloud nacos config读取配置文件内容

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>eurekaproviderauthent</module>
         <module>alinacosdiscoveryserver</module>
         <module>alinacosdiscoveryclient</module>
+        <module>alinacosconfig</module>
     </modules>
 
 
